--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,7 +259,7 @@ button:focus, .btn:focus{
 .chat-messages .message .meta {
 	font-size: .9rem;
     font-weight: bold;
-    color: #000;
+	color: #000;
     margin-bottom: 10px;
 }
 
@@ -565,12 +565,13 @@ label {
 	position:absolute;
 	transform: rotate(-90deg);
 	color:#000;
-	font-size:15px;
+	font-size:12px;
 	margin-left: -10px;
 	margin-top:53px;
 	margin-right:0px;
 	margin-bottom:0px;
 	border-style:none;
+	bottom: 7px;
   }
   
 
