--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,11 +68,20 @@ position: relative;
 position: absolute;
 width: 28px;
 top: 7px;
-right:11px;
+right:10px;
 cursor: pointer;
 font-size: 1.6em;
-	
 }
+
+#generate{
+position: absolute;
+width: 24px;
+top: 10px;
+right:42px;
+cursor: pointer;
+font-size: 1.6em;
+}
+
 #imageBird{
 position: relative;
 cursor: default;
